--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -106,3 +106,8 @@ code {
   opacity: 1;
   visibility: visible;
 }
+
+
+.about_use_main_card {
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.451);
+}
